--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,7 +147,7 @@
 			position: absolute;
 			bottom: 0;
 			left: 0;
-			background: #1a1f2c;
+			background: #BABBBF;
 			background: rgba(18, 21, 29, 0.85);
 			width: 100%;
 			padding: 1em;
