Changing 1st Box Color

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,7 @@
 	body {
 		position: relative;
 		background-color: #12151D;
-		color: #999;
+		color: #290B03;
 		color: rgba(255, 255, 255, 0.6);
 		font-family: 'Source Sans Pro';
 		font-weight: 400;
