--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -61,7 +61,7 @@
 	body {
 		position: relative;
 		background-color: #0E900A;
-		color: #0E900A;
+		color: #fff;
 		color: rgba(255, 255, 255, 0.6);
 		font-family: 'Source Sans Pro';
 		font-weight: 400;
