--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,7 @@
 
 	#header {
 		position: relative;
-		background: #8FE27E url("images/overlay.png");
+		background: #F60404 url("images/overlay.png");
 		color: #fff;
 		cursor: default;
 	}
