--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,7 @@
 
 	#header {
 		position: relative;
-		background-image: url("http://img0.cfstatic.com/wallpapers/588986f0f1131701a285528d6001b9df_large.jpeg");
+		background-image: url("http://images5.alphacoders.com/434/434958.jpg");
 		cursor: default;
 	}
 
