--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,7 @@
 
 	#header {
 		position: relative;
-		background-image: url("http://images4.fanpop.com/image/photos/20400000/Liverpool-3-liverpool-fc-20447938-1024-768.jpg");
+		background-image: url("http://arysports.tv/wp-content/uploads/2015/08/LIVERPOOL-4.jpg");
 		cursor: default;
 	}
 
