--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -194,7 +194,7 @@
 
 	#header {
 		position: relative;
-		background-image: url("http://i.telegraph.co.uk/multimedia/archive/01793/avi-cohen_1793630b.jpg");
+		background-image: url("http://cdn.digitalsport.co/wp-content/uploads/2010/01/liverpool_fc_by_josephlee.jpg");
 		cursor: default;
 	}
 
