--- a/html5up-highlights/assets/css/main.css
+++ b/html5up-highlights/assets/css/main.css
@@ -1312,7 +1312,7 @@
 	html {
 		background-color: #313a3d;
 		background-attachment: fixed,						fixed;
-		background-image: url("http://i3.mirror.co.uk/incoming/article4735129.ece/ALTERNATES/s1227b/Leicester-City-v-Liverpool.jpg"), url("../../images/bg.jpg");
+		background-image: url("http://i3.mirror.co.uk/incoming/article4735129.ece/ALTERNATES/s1227b/Leicester-City-v-Liverpool.jpg"), url("http://game7network.com/wp-content/uploads/steven-gerrard_BGS.jpg");
 		background-position: top left,					center center;
 		background-repeat: repeat,						none;
 		background-size: auto,						cover;
