--- a/html5up-highlights/assets/css/main.css
+++ b/html5up-highlights/assets/css/main.css
@@ -1312,7 +1312,7 @@
 	html {
 		background-color: #313a3d;
 		background-attachment: fixed,						fixed;
-		background-image: url("http://blog.williamhill.com.au/wp-content/files/sites/13/2015/05/Steven-Gerrard.jpg"), url("http://game7network.com/wp-content/uploads/steven-gerrard_BGS.jpg");
+		background-image: url("http://kaalin.com/uploads/article/photo/IMG_5EC924-898081-1927CC-9B75C4-BC16BB-2949A2.jpg"), url("http://game7network.com/wp-content/uploads/steven-gerrard_BGS.jpg");
 		background-position: top left,					center center;
 		background-repeat: repeat,						none;
 		background-size: auto,						cover;
